# vestige

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
apps/dashboard/: package-lock.json
apps/dashboard/src/: app.css  app.html
apps/dashboard/src/lib/components/: Graph3D.svelte  PipelineVisualizer.svelte  TimeSlider.svelte
apps/dashboard/src/lib/graph/: dream-mode.ts  edges.ts  effects.ts  events.ts  force-sim.ts  nodes.ts  particles.ts  scene.ts  temporal.ts
apps/dashboard/src/lib/graph/shaders/: nebula.frag.ts  post-processing.ts
apps/dashboard/src/lib/stores/: graph-state.svelte.ts
apps/dashboard/src/lib/types/: index.ts
apps/dashboard/src/routes/: +layout.svelte  +page.svelte
apps/dashboard/src/routes/(app)/explore/: +page.svelte
apps/dashboard/src/routes/(app)/feed/: +page.svelte
apps/dashboard/src/routes/(app)/graph/: +page.svelte
apps/dashboard/src/routes/(app)/intentions/: +page.svelte
apps/dashboard/src/routes/(app)/memories/: +page.svelte
apps/dashboard/src/routes/(app)/settings/: +page.svelte
apps/dashboard/src/routes/(app)/stats/: +page.svelte
apps/dashboard/src/routes/(app)/timeline/: +page.svelte
crates/vestige-core/: Cargo.toml
crates/vestige-core/src/: lib.rs
crates/vestige-core/src/embeddings/: config.rs  gemini.rs  local.rs  mod.rs
crates/vestige-core/src/search/: vector.rs
crates/vestige-core/src/storage/: migrations.rs  sqlite.rs
crates/vestige-mcp/: Cargo.toml
crates/vestige-mcp/src/: cognitive.rs  main.rs  server.rs
crates/vestige-mcp/src/dashboard/: handlers.rs
crates/vestige-mcp/src/tools/: dream.rs  explore.rs  search_unified.rs  smart_ingest.rs
docs/: CLAUDE-SETUP.md
docs/integrations/: xcode.md
docs/superpowers/plans/: 2026-03-18-gemini-embedding.md
docs/superpowers/specs/: 2026-03-18-gemini-embedding-design.md
